2007-11-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-15-03
	* fix ordering bug (oracle) reported by Martin
	* fix convert dialog to correctly handle requested
	sequences/modules

2007-11-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-15-02
	* when renaming modules, propagate the new label to all relevant
	downstream InputTag parameters

2007-11-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-15-01
	* important bug reported by Marco fixed, regarding the
	manipulation of a configurations sequences and its correct
	reflection in the db after saving.
	* uncovered and fixed some other bugs related with sequence
	manipulation in the gui ...

2007-11-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-15-00
	* gui: new 'convert' dialog (menu Configurations -> Convert)

2007-11-08  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-14-07
	* fix ant target war
	* first import of OfflineConverter

2007-11-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-14-06
	* ConfigurationModifier.insertDaqSource(): disregard if the
	configuration has already a DaqSource defined!

2007-11-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-14-05
	* one more bugfix, to confdb.data.ModifierInstructions

2007-11-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-14-04
	* OnlineConverter ctor without arguments (based on 'properties')
	* make default stream in case no streams are defined
	* bugfix to OnlineConverter

2007-11-07  Philipp SCHIEFERDECKER <philipp.schieferdecker@cern.ch>

	* tag V00-14-03
	* parser: fix ShmStreamConsumer parameter list (JH)
	* add missing features to OnlineConverter
	* fixes to gui
	* fixes to MySQL schema (procedures)

2007-11-06  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-14-02
	* converter: add ConverterBase, OnlineConverter, OfflineConverter